--- a/Baladas/baladas/src/main/res/layout/activity_login.xml
+++ b/Baladas/baladas/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    style="@style/defaultScreenStyle">
+    style="@style/defaultScreenStyle" >
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -21,7 +21,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="30dp"
-            android:textAlignment="center"
+            android:gravity="center"
             android:textColor="@color/gray"
             android:text="@string/login_title"/>
     </LinearLayout>
@@ -33,16 +33,17 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/login_userName"
+            android:id="@+id/login_et_userName"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:maxLength="20"
             android:hint="@string/login_userNameMessage"/>
 
         <EditText
-            android:id="@+id/login_password"
+            android:id="@+id/login_et_password"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:hint="senha"
             android:password="true"
             android:maxLength="20"
             />
@@ -54,7 +55,7 @@
         android:padding="10dp"
         >
 
-        <Button android:id="@+id/login_button_Enter"
+        <Button android:id="@+id/login_bt_Enter"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -63,7 +64,7 @@
             style="@style/buttonStyle"
             />
 
-        <Button android:id="@+id/login_button_NewAcount"
+        <Button android:id="@+id/login_bt_NewAcount"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
