--- a/Baladas/baladas/src/main/res/layout/activity_pesquisa.xml
+++ b/Baladas/baladas/src/main/res/layout/activity_pesquisa.xml
@@ -1,14 +1,60 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="br.uniararas.baladas.pesquisa"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    style="@style/defaultScreenStyle">
+    android:orientation="vertical"
+    style="@style/defaultScreenStyle" >
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:paddingTop="10dp"
+        android:orientation="vertical"
+        android:layout_gravity="top|center">
 
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textSize="30dp"
+            android:gravity="center"
+            android:textColor="@color/gray"
+            android:text="@string/login_title"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/pesquisa_et_keyWord"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:maxLength="20"
+            android:hint="@string/pesquisa_keyWordMessage"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        style="@style/backgroundGray">
+
+        <GridView
+            android:id="@+id/pesquisa_grid_baladas"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:numColumns="1"
+            android:gravity="center"
+            android:stretchMode="columnWidth">
+        </GridView>
+
+    </LinearLayout>
 
 </LinearLayout>
